# BadBoggleSolver

./: CMakeLists.txt  README.md
data/: words_reduced.txt
src/: CMakeLists.txt  boggle.cpp  boggle.h  boggle_expander.h  boggle_gridmock.h  boggle_helper.cpp  boggle_helper.h  boggle_string_helper.h  main.cpp  time_helpers.h  tree.h  worddict.h
tst/: CMakeLists.txt  test_boggle.cpp  test_boggle_expander.cpp  test_tree.cpp  test_worddict.cpp
